antlr/generated-src/IDLParser.cpp

// Generated from /home/michaelspiegel/Projects/gaps/pirate/antlr/IDL.g4 by ANTLR 4.8


#include "IDLListener.h"
#include "IDLVisitor.h"

#include "IDLParser.h"


using namespace antlrcpp;
using namespace antlr4;

IDLParser::IDLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

IDLParser::~IDLParser() {
  delete _interpreter;
}

std::string IDLParser::getGrammarFileName() const {
  return "IDL.g4";
}

const std::vector<std::string>& IDLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& IDLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SpecificationContext ------------------------------------------------------------------

IDLParser::SpecificationContext::SpecificationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IDLParser::SpecificationContext::EOF() {
  return getToken(IDLParser::EOF, 0);
}

std::vector<IDLParser::DefinitionContext *> IDLParser::SpecificationContext::definition() {
  return getRuleContexts<IDLParser::DefinitionContext>();
}

IDLParser::DefinitionContext* IDLParser::SpecificationContext::definition(size_t i) {
  return getRuleContext<IDLParser::DefinitionContext>(i);
}


size_t IDLParser::SpecificationContext::getRuleIndex() const {
  return IDLParser::RuleSpecification;
}

void IDLParser::SpecificationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecification(this);
}

void IDLParser::SpecificationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecification(this);
}


antlrcpp::Any IDLParser::SpecificationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitSpecification(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::SpecificationContext* IDLParser::specification() {
  SpecificationContext *_localctx = _tracker.createInstance<SpecificationContext>(_ctx, getState());
  enterRule(_localctx, 0, IDLParser::RuleSpecification);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(100);
      definition();
      setState(103); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 35) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 35)) & ((1ULL << (IDLParser::AT - 35))
      | (1ULL << (IDLParser::KW_STRUCT - 35))
      | (1ULL << (IDLParser::KW_ENUM - 35))
      | (1ULL << (IDLParser::KW_MODULE - 35))
      | (1ULL << (IDLParser::KW_UNION - 35)))) != 0));
    setState(105);
    match(IDLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

IDLParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IDLParser::AnnappsContext* IDLParser::DefinitionContext::annapps() {
  return getRuleContext<IDLParser::AnnappsContext>(0);
}

IDLParser::Type_declContext* IDLParser::DefinitionContext::type_decl() {
  return getRuleContext<IDLParser::Type_declContext>(0);
}

tree::TerminalNode* IDLParser::DefinitionContext::SEMICOLON() {
  return getToken(IDLParser::SEMICOLON, 0);
}

IDLParser::ModuleContext* IDLParser::DefinitionContext::module() {
  return getRuleContext<IDLParser::ModuleContext>(0);
}


size_t IDLParser::DefinitionContext::getRuleIndex() const {
  return IDLParser::RuleDefinition;
}

void IDLParser::DefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefinition(this);
}

void IDLParser::DefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefinition(this);
}


antlrcpp::Any IDLParser::DefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitDefinition(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::DefinitionContext* IDLParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, IDLParser::RuleDefinition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    annapps();
    setState(114);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IDLParser::KW_STRUCT:
      case IDLParser::KW_ENUM:
      case IDLParser::KW_UNION: {
        setState(108);
        type_decl();
        setState(109);
        match(IDLParser::SEMICOLON);
        break;
      }

      case IDLParser::KW_MODULE: {
        setState(111);
        module();
        setState(112);
        match(IDLParser::SEMICOLON);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleContext ------------------------------------------------------------------

IDLParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IDLParser::ModuleContext::KW_MODULE() {
  return getToken(IDLParser::KW_MODULE, 0);
}

IDLParser::IdentifierContext* IDLParser::ModuleContext::identifier() {
  return getRuleContext<IDLParser::IdentifierContext>(0);
}

tree::TerminalNode* IDLParser::ModuleContext::LEFT_BRACE() {
  return getToken(IDLParser::LEFT_BRACE, 0);
}

tree::TerminalNode* IDLParser::ModuleContext::RIGHT_BRACE() {
  return getToken(IDLParser::RIGHT_BRACE, 0);
}

std::vector<IDLParser::DefinitionContext *> IDLParser::ModuleContext::definition() {
  return getRuleContexts<IDLParser::DefinitionContext>();
}

IDLParser::DefinitionContext* IDLParser::ModuleContext::definition(size_t i) {
  return getRuleContext<IDLParser::DefinitionContext>(i);
}


size_t IDLParser::ModuleContext::getRuleIndex() const {
  return IDLParser::RuleModule;
}

void IDLParser::ModuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModule(this);
}

void IDLParser::ModuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModule(this);
}


antlrcpp::Any IDLParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::ModuleContext* IDLParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 4, IDLParser::RuleModule);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(IDLParser::KW_MODULE);
    setState(117);
    identifier();
    setState(118);
    match(IDLParser::LEFT_BRACE);
    setState(120); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(119);
      definition();
      setState(122); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 35) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 35)) & ((1ULL << (IDLParser::AT - 35))
      | (1ULL << (IDLParser::KW_STRUCT - 35))
      | (1ULL << (IDLParser::KW_ENUM - 35))
      | (1ULL << (IDLParser::KW_MODULE - 35))
      | (1ULL << (IDLParser::KW_UNION - 35)))) != 0));
    setState(124);
    match(IDLParser::RIGHT_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- A_scoped_nameContext ------------------------------------------------------------------

IDLParser::A_scoped_nameContext::A_scoped_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IDLParser::AnnappsContext* IDLParser::A_scoped_nameContext::annapps() {
  return getRuleContext<IDLParser::AnnappsContext>(0);
}

IDLParser::Scoped_nameContext* IDLParser::A_scoped_nameContext::scoped_name() {
  return getRuleContext<IDLParser::Scoped_nameContext>(0);
}


size_t IDLParser::A_scoped_nameContext::getRuleIndex() const {
  return IDLParser::RuleA_scoped_name;
}

void IDLParser::A_scoped_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterA_scoped_name(this);
}

void IDLParser::A_scoped_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitA_scoped_name(this);
}


antlrcpp::Any IDLParser::A_scoped_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitA_scoped_name(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::A_scoped_nameContext* IDLParser::a_scoped_name() {
  A_scoped_nameContext *_localctx = _tracker.createInstance<A_scoped_nameContext>(_ctx, getState());
  enterRule(_localctx, 6, IDLParser::RuleA_scoped_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    annapps();
    setState(127);
    scoped_name();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Scoped_nameContext ------------------------------------------------------------------

IDLParser::Scoped_nameContext::Scoped_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> IDLParser::Scoped_nameContext::ID() {
  return getTokens(IDLParser::ID);
}

tree::TerminalNode* IDLParser::Scoped_nameContext::ID(size_t i) {
  return getToken(IDLParser::ID, i);
}

std::vector<tree::TerminalNode *> IDLParser::Scoped_nameContext::DOUBLE_COLON() {
  return getTokens(IDLParser::DOUBLE_COLON);
}

tree::TerminalNode* IDLParser::Scoped_nameContext::DOUBLE_COLON(size_t i) {
  return getToken(IDLParser::DOUBLE_COLON, i);
}


size_t IDLParser::Scoped_nameContext::getRuleIndex() const {
  return IDLParser::RuleScoped_name;
}

void IDLParser::Scoped_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScoped_name(this);
}

void IDLParser::Scoped_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScoped_name(this);
}


antlrcpp::Any IDLParser::Scoped_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitScoped_name(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::Scoped_nameContext* IDLParser::scoped_name() {
  Scoped_nameContext *_localctx = _tracker.createInstance<Scoped_nameContext>(_ctx, getState());
  enterRule(_localctx, 8, IDLParser::RuleScoped_name);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(130);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == IDLParser::DOUBLE_COLON) {
      setState(129);
      match(IDLParser::DOUBLE_COLON);
    }
    setState(132);
    match(IDLParser::ID);
    setState(137);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(133);
        match(IDLParser::DOUBLE_COLON);
        setState(134);
        match(IDLParser::ID); 
      }
      setState(139);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_expContext ------------------------------------------------------------------

IDLParser::Const_expContext::Const_expContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IDLParser::LiteralContext* IDLParser::Const_expContext::literal() {
  return getRuleContext<IDLParser::LiteralContext>(0);
}


size_t IDLParser::Const_expContext::getRuleIndex() const {
  return IDLParser::RuleConst_exp;
}

void IDLParser::Const_expContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst_exp(this);
}

void IDLParser::Const_expContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst_exp(this);
}


antlrcpp::Any IDLParser::Const_expContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitConst_exp(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::Const_expContext* IDLParser::const_exp() {
  Const_expContext *_localctx = _tracker.createInstance<Const_expContext>(_ctx, getState());
  enterRule(_localctx, 10, IDLParser::RuleConst_exp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    literal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

IDLParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IDLParser::LiteralContext::HEX_LITERAL() {
  return getToken(IDLParser::HEX_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::INTEGER_LITERAL() {
  return getToken(IDLParser::INTEGER_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::OCTAL_LITERAL() {
  return getToken(IDLParser::OCTAL_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::STRING_LITERAL() {
  return getToken(IDLParser::STRING_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::WIDE_STRING_LITERAL() {
  return getToken(IDLParser::WIDE_STRING_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::CHARACTER_LITERAL() {
  return getToken(IDLParser::CHARACTER_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::WIDE_CHARACTER_LITERAL() {
  return getToken(IDLParser::WIDE_CHARACTER_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::FIXED_PT_LITERAL() {
  return getToken(IDLParser::FIXED_PT_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::FLOATING_PT_LITERAL() {
  return getToken(IDLParser::FLOATING_PT_LITERAL, 0);
}

tree::TerminalNode* IDLParser::LiteralContext::BOOLEAN_LITERAL() {
  return getToken(IDLParser::BOOLEAN_LITERAL, 0);
}


size_t IDLParser::LiteralContext::getRuleIndex() const {
  return IDLParser::RuleLiteral;
}

void IDLParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}

void IDLParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IDLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}


antlrcpp::Any IDLParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IDLVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

IDLParser::LiteralContext* IDLParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 12, IDLParser::RuleLiteral);
  size_t _la = 0;
